Fix: SearchContainer realignments and scaling corrections

--- a/src/SearchContainer/SearchContainer.css
+++ b/src/SearchContainer/SearchContainer.css
@@ -1,20 +1,26 @@
+.search-container {
+  width: 32%;
+  margin: 3%;
+  /* padding: 2rem; */
+}
+
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #f8f9fa;
-  padding: 2rem;
+  /* padding: 2rem; */
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  width: 90%;
-  max-width: 500px;
-  margin: 2rem auto;
+  /* width: 90%; */
+  /* max-width: 500px; */
+  /* margin: 2rem auto; */
 }
 
 input {
-  width: 100%;
+  width: 80%;
   padding: 10px 14px;
-  margin: 10px 0;
+  margin: 12px 0;
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 1rem;
@@ -22,7 +28,7 @@ input {
 
 button {
   padding: 10px 16px;
-  margin-top: 16px;
+  margin: 16px 0px 10px 0px;
   background-color: #3e49b1;
   color: white;
   border: none;
@@ -35,10 +41,27 @@ button:hover {
   background-color: #2f398a;
 }
 
+.residence-type-container {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 5px;
+}
+
+/* .residence-type-container label :not(.residence-type) { */
+.residence-type-container label {
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+}
+
 .residence-type {
   display: flex;
-  gap: 20px;
-  margin: 10px 0;
+  flex-direction: row;
+  justify-content: center;
+  gap: 32px;
+  margin: 5px 0;
 }
 
 .residence-type label {
@@ -47,6 +70,7 @@ button:hover {
   gap: 5px;
   cursor: pointer;
   color: black;
+  font-weight: 400;
 }
 
 .energy-slider-container {
@@ -56,7 +80,7 @@ button:hover {
 
 .energy-slider-container label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   font-weight: 500;
   text-align: center;
 }
@@ -64,17 +88,18 @@ button:hover {
 .slider-labels {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 5px;
+  /* margin-bottom: 5px; */
   font-size: 0.9rem;
   color: #666;
 }
 
 .energy-slider {
-  width: 100%;
+  width: 98%;
   height: 8px;
+  padding: 1px;
   background: #ddd;
-  border-radius: 4px;
-  outline: none;
+  /* border-radius: 4px; */
+  /* outline: none; */
 }
 
 .energy-slider::-webkit-slider-thumb {
